# AvaScenarioMapper

./: .gitignore  .zenodo.json  README.md  avaScenMapperCfg.ini  pyproject.toml  runAvaScenMapper.py
avaPotMatrix/: avaPotMatrix.csv
com3AvaScenFilter/: avaScenFilter.py
docs/: README.md  index.html
handoverDVT/.ipynb_checkpoints/: AvalancheScenarioMapper-checkpoint.md
handoverDVT/v1/.ipynb_checkpoints/: AvalancheScenarioMapper-checkpoint.md
handoverDVT/v2/: AvalancheScenarioMapper.md
in1Utils/: caamlUtils.py  cfgUtils.py  mapperUtils.py
in2Matrix/: avaPotMatrix.py
