[project]
name = "avalanche-scenario-mapper"
description = "Avalanche Scenario Mapper (Step 16: Scenario Filtering and Visualization)"
requires-python = ">=3.9,<3.12"

# ----------------------------------------------------------------------
# Core Python dependencies (minimal, portable)
# ----------------------------------------------------------------------
dependencies = [
    "pandas",
    "geopandas",
    "pyarrow",
    "shapely",
    "requests",   # only needed for CAAML v6 online integration
]

# ----------------------------------------------------------------------
# Pixi PROJECT configuration
# ----------------------------------------------------------------------
[tool.pixi]
channels  = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64", "win-64", "osx-64"]

# ----------------------------------------------------------------------
# Conda-level dependencies (GDAL/Fiona/PROJ stack)
# ----------------------------------------------------------------------
[tool.pixi.dependencies]
python   = "3.11.*"
proj     = "9.5.*"
gdal     = "3.10.*"
fiona    = "1.10.*"
rasterio = "1.4.*"
pyproj   = "3.7.*"
pyarrow  = "*"

# ----------------------------------------------------------------------
# Tasks
# ----------------------------------------------------------------------
[tool.pixi.tasks]
mapper = { cmd = "python runAvaScenMapper.py", cwd = "." }

# ----------------------------------------------------------------------
# Environments
# ----------------------------------------------------------------------
[tool.pixi.environments]
dev = { features = [] }

# ----------------------------------------------------------------------
# Runtime environment variables
# ----------------------------------------------------------------------
[tool.pixi.activation.env]
NUMBA_CAPTURED_ERRORS        = "new_style"
CPL_LOG                      = "/dev/null"
GDAL_PAM_ENABLED             = "NO"
GDAL_DISABLE_READDIR_ON_OPEN = "EMPTY_DIR"
